[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
env_logger = "0.7"
hmac = "0.12.1"
sha1 = "0.10.1"
hex-literal = "0.3.4"
base64 = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
chrono = "0.4.19"
serde_json = "1.0.81"
bytes = "1.1.0"
fast-socks5 = "0.8.0"
trust-dns-resolver = "0.21.2"
dirs = "4.0.0"


[dev-dependencies]
tokio-test = "0.4.2"